--- a/line-detection/line-detection.ipynb
+++ b/line-detection/line-detection.ipynb
@@ -7,52 +7,7 @@
     "# Self-Driving Car Engineer Nanodegree\n",
     "\n",
     "\n",
-    "## Project: **Finding Lane Lines on the Road** \n",
-    "***\n",
-    "In this project, you will use the tools you learned about in the lesson to identify lane lines on the road.  You can develop your pipeline on a series of individual images, and later apply the result to a video stream (really just a series of images). Check out the video clip \"raw-lines-example.mp4\" (also contained in this repository) to see what the output should look like after using the helper functions below. \n",
-    "\n",
-    "Once you have a result that looks roughly like \"raw-lines-example.mp4\", you'll need to get creative and try to average and/or extrapolate the line segments you've detected to map out the full extent of the lane lines.  You can see an example of the result you're going for in the video \"P1_example.mp4\".  Ultimately, you would like to draw just one line for the left side of the lane, and one for the right.\n",
-    "\n",
-    "In addition to implementing code, there is a brief writeup to complete. The writeup should be completed in a separate file, which can be either a markdown file or a pdf document. There is a [write up template](https://github.com/udacity/CarND-LaneLines-P1/blob/master/writeup_template.md) that can be used to guide the writing process. Completing both the code in the Ipython notebook and the writeup template will cover all of the [rubric points](https://review.udacity.com/#!/rubrics/322/view) for this project.\n",
-    "\n",
-    "---\n",
-    "Let's have a look at our first image called 'test_images/solidWhiteRight.jpg'.  Run the 2 cells below (hit Shift-Enter or the \"play\" button above) to display the image.\n",
-    "\n",
-    "**Note: If, at any point, you encounter frozen display windows or other confounding issues, you can always start again with a clean slate by going to the \"Kernel\" menu above and selecting \"Restart & Clear Output\".**\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**The tools you have are color selection, region of interest selection, grayscaling, Gaussian smoothing, Canny Edge Detection and Hough Tranform line detection.  You  are also free to explore and try other techniques that were not presented in the lesson.  Your goal is piece together a pipeline to detect the line segments in the image, then average/extrapolate them and draw them onto the image for display (as below).  Once you have a working pipeline, try it out on the video stream below.**\n",
-    "\n",
-    "---\n",
-    "\n",
-    "<figure>\n",
-    " <img src=\"examples/line-segments-example.jpg\" width=\"380\" alt=\"Combined Image\" />\n",
-    " <figcaption>\n",
-    " <p></p> \n",
-    " <p style=\"text-align: center;\"> Your output should look something like this (above) after detecting line segments using the helper functions below </p> \n",
-    " </figcaption>\n",
-    "</figure>\n",
-    " <p></p> \n",
-    "<figure>\n",
-    " <img src=\"examples/laneLines_thirdPass.jpg\" width=\"380\" alt=\"Combined Image\" />\n",
-    " <figcaption>\n",
-    " <p></p> \n",
-    " <p style=\"text-align: center;\"> Your goal is to connect/average/extrapolate line segments to get output like this</p> \n",
-    " </figcaption>\n",
-    "</figure>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Run the cell below to import some packages.  If you get an `import error` for a package you've already installed, try changing your kernel (select the Kernel menu above --> Change Kernel).  Still have problems?  Try relaunching Jupyter Notebook from the terminal prompt.  Also, see [this forum post](https://carnd-forums.udacity.com/cq/viewquestion.action?spaceKey=CAR&id=29496372&questionTitle=finding-lanes---import-cv2-fails-even-though-python-in-the-terminal-window-has-no-problem-with-import-cv2) for more troubleshooting tips.**  "
+    "## Project: **Finding Lane Lines on the Road** \n"
    ]
   },
   {
@@ -82,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read in an Image"
+    "### Checking images used for test"
    ]
   },
   {
@@ -131,38 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ideas for Lane Detection Pipeline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Some OpenCV functions (beyond those introduced in the lesson) that might be useful for this project are:**\n",
-    "\n",
-    "`cv2.inRange()` for color selection  \n",
-    "`cv2.fillPoly()` for regions selection  \n",
-    "`cv2.line()` to draw lines on an image given endpoints  \n",
-    "`cv2.addWeighted()` to coadd / overlay two images\n",
-    "`cv2.cvtColor()` to grayscale or change color\n",
-    "`cv2.imwrite()` to output images to file  \n",
-    "`cv2.bitwise_and()` to apply a mask to an image\n",
-    "\n",
-    "**Check out the OpenCV documentation to learn about these and discover even more awesome functionality!**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Helper Functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Below are some helper functions to help get you started. They should look familiar from the lesson!"
    ]
   },
   {
@@ -182,8 +106,6 @@
     "    (assuming your grayscaled image is called 'gray')\n",
     "    you should call plt.imshow(gray, cmap='gray')\"\"\"\n",
     "    return cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
-    "    # Or use BGR2GRAY if you read an image with cv2.imread()\n",
-    "    # return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
     "def canny(img, low_threshold, high_threshold):\n",
     "    \"\"\"Applies the Canny transform\"\"\"\n",
@@ -200,20 +122,16 @@
     "    Only keeps the region of the image defined by the polygon\n",
     "    formed from `vertices`. The rest of the image is set to black.\n",
     "    \"\"\"\n",
-    "    #defining a blank mask to start with\n",
     "    mask = np.zeros_like(img)   \n",
     "    \n",
-    "    #defining a 3 channel or 1 channel color to fill the mask with depending on the input image\n",
     "    if len(img.shape) > 2:\n",
-    "        channel_count = img.shape[2]  # i.e. 3 or 4 depending on your image\n",
+    "        channel_count = img.shape[2]\n",
     "        ignore_mask_color = (255,) * channel_count\n",
     "    else:\n",
     "        ignore_mask_color = 255\n",
-    "        \n",
-    "    #filling pixels inside the polygon defined by \"vertices\" with the fill color    \n",
+    "           \n",
     "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
     "    \n",
-    "    #returning the image only where mask pixels are nonzero\n",
     "    masked_image = cv2.bitwise_and(img, mask)\n",
     "    return masked_image\n",
     "\n",
@@ -285,8 +203,6 @@
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
     "    draw_lines(line_img, lines)\n",
     "    return line_img\n",
-    "\n",
-    "# Python 3 has support for cool math symbols.\n",
     "\n",
     "def weighted_img(img, initial_img, α=0.8, β=1., λ=0.):\n",
     "    \"\"\"\n",
@@ -453,6 +369,7 @@
     "        (0.58333 * imshape[1], 0.611 * imshape[0]),\n",
     "        (0.95833 * imshape[1], imshape[0])]], dtype=np.int32)\n",
     "    masked_image = region_of_interest(edges_image, vertices)\n",
+    "    \n",
     "    # Array with the enpoints of detected line segments\n",
     "    lines_image = hough_lines(masked_image, rho, theta, threshold, min_line_len, max_line_gap)\n",
     "    \n",
@@ -476,25 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test on Videos\n",
-    "\n",
-    "You know what's cooler than drawing lanes over images? Drawing lanes over video!\n",
-    "\n",
-    "We can test our solution on two provided videos:\n",
-    "\n",
-    "`solidWhiteRight.mp4`\n",
-    "\n",
-    "`solidYellowLeft.mp4`\n",
-    "\n",
-    "**Note: if you get an `import error` when you run the next cell, try changing your kernel (select the Kernel menu above --> Change Kernel).  Still have problems?  Try relaunching Jupyter Notebook from the terminal prompt. Also, check out [this forum post](https://carnd-forums.udacity.com/questions/22677062/answers/22677109) for more troubleshooting tips.**\n",
-    "\n",
-    "**If you get an error that looks like this:**\n",
-    "```\n",
-    "NeedDownloadError: Need ffmpeg exe. \n",
-    "You can download it by calling: \n",
-    "imageio.plugins.ffmpeg.download()\n",
-    "```\n",
-    "**Follow the instructions in the error message and check out [this forum post](https://carnd-forums.udacity.com/display/CAR/questions/26218840/import-videofileclip-error) for more troubleshooting tips across operating systems.**"
+    "## Test on Videos"
    ]
   },
   {
@@ -530,23 +429,6 @@
     "# Import everything needed to edit/save/watch video clips\n",
     "from moviepy.editor import VideoFileClip\n",
     "from IPython.display import HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def process_image(image):\n",
-    "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
-    "    # TODO: put your pipeline here,\n",
-    "    # you should return the final output (image where lines are drawn on lanes)\n",
-    "    \n",
-    "    # Since this was already implemented on the first part of the exercise, I am just calling the previous function.\n",
-    "    return overlap_lane(image)"
    ]
   },
   {
@@ -596,7 +478,7 @@
     "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
     "##clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\").subclip(0,5)\n",
     "clip1 = VideoFileClip(\"test_videos/solidWhiteRight.mp4\")\n",
-    "white_clip = clip1.fl_image(process_image) #NOTE: this function expects color images!!\n",
+    "white_clip = clip1.fl_image(overlap_lane) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(white_output, audio=False)"
    ]
   },
@@ -731,22 +613,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Writeup and Submission\n",
-    "\n",
-    "If you're satisfied with your video outputs, it's time to make the report writeup in a pdf or markdown file. Once you have this Ipython notebook ready along with the writeup, it's time to submit for review! Here is a [link](https://github.com/udacity/CarND-LaneLines-P1/blob/master/writeup_template.md) to the writeup template file.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "## Optional Challenge\n",
-    "\n",
-    "Try your lane finding pipeline on the video below.  Does it still work?  Can you figure out a way to make it more robust?  If you're up for the challenge, modify your pipeline so it works with this video and submit it along with the rest of your project!"
+    "## Optional Challenge"
    ]
   },
   {
@@ -783,11 +654,7 @@
    ],
    "source": [
     "challenge_output = 'test_videos_output/challenge.mp4'\n",
-    "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
-    "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
-    "## Where start_second and end_second are integer values representing the start and end of the subclip\n",
-    "## You may also uncomment the following line for a subclip of the first 5 seconds\n",
-    "##clip3 = VideoFileClip('test_videos/challenge.mp4').subclip(0,5)\n",
+    "\n",
     "clip3 = VideoFileClip('test_videos/challenge.mp4')\n",
     "challenge_clip = clip3.fl_image(process_image)\n",
     "%time challenge_clip.write_videofile(challenge_output, audio=False)"
